updated scrollbar anf fixed nav

--- a/Scss/_media.scss
+++ b/Scss/_media.scss
@@ -40,6 +40,9 @@
 }
 // 580
 @media only screen and (max-width: 580px) {
+	.okummm {
+		display: block;
+	}
 	.where {
 		margin-top: 100rem;
 		.cards {
