--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -698,4 +698,38 @@ footer {
 .slick-next {
 	display: none;
 }
+.okummm {
+	display: none;
+}
+::selection {
+	background: $main; /* WebKit/Blink Browsers */
+	color: $darked-white;
+}
+::-moz-selection {
+	background: $main; /* Gecko Browsers */
+	color: $darked-white;
+}
+body::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar {
+	width: 10px;
+	background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: $main;
+	background-image: -webkit-linear-gradient(
+		90deg,
+		rgba(255, 255, 255, 0.2) 25%,
+		transparent 25%,
+		transparent 50%,
+		rgba(255, 255, 255, 0.2) 50%,
+		rgba(255, 255, 255, 0.2) 75%,
+		transparent 75%,
+		transparent
+	);
+}
 @import "media";
